gitops/basic/1.1.grade-api-basic_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grade-api-basic
  namespace: grade-demo
  labels:
    app: grade-api-basic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grade-api-basic
  template:
    metadata:
      labels:
        app: grade-api-basic
    spec:
      containers:
      - name: grade-api-basic
        image: rslim087/kubernetes-course-grade-submission-api:stateless
        ports:
          - containerPort: 3000
