gitops/basic/1.2.grade-api-basic_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grade-api-basic_service
  namespace: grade-demo
spec:
  type: ClusterIP ### NodePort
  selector:
    app: grade-api-basic
  ports:
  - port: 3000
    targetPort: 3000
###    nodePort: 31000
