gitops/basic/grade-submission-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
  name: grade-submission-api
  namespace: grade-demo
spec:
  type: NodePort ### Used for Onprem K8s Cluster
  type: LoadBalancer ### Used for Cloud K8s Cluster
  selector:
    app: grade-submission
  ports:
  - port: 3000
    targetPort: 3000
    nodePort: 31000
