gitops/basic/1.3.grade-api-basic_ingress.yaml


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: grade-demo
  name: grade-api-basic
  labels:
    name: grade-api-basic
spec:
  rules:
  - host: gradeportal.nghiapg.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: grade-api-basic
            port: 
              number: 3000
  ingressClassName: nginx ### We use nginx ingress (a shared Public LoadBalancer) to expose ClusterIP svc of grade-api_service to public to do the test
